--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -119,7 +119,7 @@ img{
     font-weight: var(--font-semi);
 
     &__menu{
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 767px){
             position: fixed;
             top: var(--header-height);
             right: -100%;
@@ -178,7 +178,9 @@ img{
 
 /*===== HOME =====*/
 .home{
-    row-gap: 1rem;
+    position: relative;
+    row-gap: 5rem;
+    padding: 4rem 0 5rem;
 
     &__data{
         align-self: center;
@@ -381,6 +383,65 @@ img{
 }
 
 /* ===== MEDIA QUERIES=====*/
+@media screen and (max-width: 320px){
+    .home{
+        row-gap: 2rem;
+
+        &__img{
+            width: 200px;
+        }
+    }
+}
+
+@media screen and (min-width: 576px){
+    .home{
+        padding: 4rem 0 2rem;
+        &__social{
+            padding-top: 0;
+            padding-bottom: 2.5rem;
+            flex-direction: row;
+            align-self: flex-end;
+
+            &-icon{
+                margin-bottom: 0;
+                margin-right: var(--mb-4);
+            }
+        }
+        &__img{
+            width: 300px;
+            bottom: 25%;
+        }
+    }
+
+    .about__container{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        text-align: initial;
+    }
+
+    .skills__container{
+        grid-template-columns: .7fr;
+        justify-content: center;
+        column-gap: 1rem;
+    }
+
+    .work__container{
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+        padding-top: 2rem;
+    }
+
+    .contact{
+        &__form{
+            width: 360px;
+            padding-top: 2rem ;
+        }
+        &__container{
+            justify-items: center;
+        }
+    }
+}
+
 @media screen and(min-width: 768px){
     body{
         margin: 0;
@@ -400,7 +461,7 @@ img{
     }
 
     .nav{
-        height: calc(var(--header-height) + 1rem);
+        height: calc(var(--header-height) + 1.5rem);
         &__list{
             display: flex;
             padding-top: 0;
@@ -417,32 +478,17 @@ img{
         }
     }
     .home{
-        height: 100vh;
-        &__data{
-            align-self: flex-end;
-        }
-        &__social{
-            padding-top: 0;
-            padding-bottom: 2.5rem;
-            flex-direction: row;
-            align-self: flex-end;
-
-            &-icon{
-                margin-bottom: 0;
-                margin-right: var(--mb-4);
-            }
-        }
+        padding: 8rem 0 2rem;
+        
         &__img{
-            width: 457px;
-            bottom: 15%;
+            width: 400px;
+            bottom: 10%;
         }
     }
 
     .about{
         &__container{
-            grid-template-columns: repeat(2,1fr);
-            align-items: center;
-            text-align: initial;
+           padding-top: 2rem;
         }
         &__img{
             & img{
@@ -450,38 +496,28 @@ img{
             }
         }
     }
-    .skills{
-        &__container{
-            grid-template-columns: repeat(2,1fr);
-            align-items: center;
-            text-align: initial;
-        }
+    .skills__container{
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+        align-items: center;
+        text-align: initial;
     }
-    .work{
-        &__container{
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(2, 1fr);
-            column-gap: 2rem;
-        }
+    .work__container{
+        grid-template-columns: repeat(3,1fr);
+        column-gap: 2rem;
     }
-    .contact{
-        &__form{
-            width: 360px;
-        }
-        &__container{
-            justify-items: center;
-        }
-    }
-
 }
-@media screen and(min-width: 1024px){
+
+@media screen and (min-width: 992px){
     .bd-grid{
         margin-left: auto;
         margin-right: auto;
     }
     .home{
+        padding: 10rem 0 2rem;
+
         &__img{
-            right: 10%;
+            width: 450px;
         }
     }
 }
