--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
   --first-color: hsl(var(--hue-color), 89%, 60%);
   --second-color: hsl(var(--hue-color), 56%, 12%);
   /*===== Fuente y tipografia =====*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
   --h2-font-size: 1.25rem;
   --normal-font-size: .938rem;
@@ -25,7 +25,6 @@
   --z-back: -10;
   --z-fixed: 100;
 }
-
 @media screen and (min-width: 968px) {
   :root {
     --big-font-size: 3.5rem;
@@ -80,10 +79,9 @@ img {
   margin-bottom: var(--mb-4);
   text-align: center;
 }
-
 .section-title::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 64px;
   height: 0.18rem;
   left: 0;
@@ -124,7 +122,6 @@ img {
   align-items: center;
   font-weight: var(--font-semi);
 }
-
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
@@ -134,37 +131,31 @@ img {
     height: 100%;
     padding: 2rem;
     background-color: var(--second-color);
-    transition: .5s;
+    transition: 0.5s;
   }
 }
-
 .nav__item {
   margin-bottom: var(--mb-4);
 }
-
 .nav__link {
   position: relative;
   color: #fff;
 }
-
 .nav__link:hover {
   position: relative;
 }
-
 .nav__link:hover::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
   top: 2rem;
   background-color: var(--first-color);
 }
-
 .nav__logo {
   color: var(--second-color);
 }
-
 .nav__toggle {
   color: var(--second-color);
   font-size: 1.5rem;
@@ -174,7 +165,7 @@ img {
 /*Active menu*/
 .active::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
@@ -193,47 +184,38 @@ img {
   row-gap: 5rem;
   padding: 4rem 0 5rem;
 }
-
 .home__data {
   align-self: center;
 }
-
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
 }
-
 .home__title-color {
   color: var(--first-color);
 }
-
 .home__social {
   display: flex;
   flex-direction: column;
 }
-
 .home__social-icon {
   width: max-content;
   margin-bottom: var(--mb-2);
   font-size: 1.5rem;
   color: var(--second-color);
 }
-
 .home__social-icon:hover {
   color: var(--first-color);
 }
-
 .home__img {
   position: absolute;
   right: 0;
   bottom: 0;
   width: 260px;
 }
-
 .home__blob {
   fill: var(--first-color);
 }
-
 .home__blob-img {
   width: 360px;
 }
@@ -243,12 +225,11 @@ img {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
-  padding: .75rem 2.5rem;
+  padding: 0.75rem 2.5rem;
   font-weight: var(--font-semi);
-  border-radius: .5rem;
-  transition: .3s;
+  border-radius: 0.5rem;
+  transition: 0.3s;
 }
-
 .button:hover {
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
 }
@@ -258,18 +239,15 @@ img {
   row-gap: 2rem;
   text-align: center;
 }
-
 .about__subtitle {
   margin-bottom: var(--mb-2);
 }
-
 .about__img {
   justify-self: center;
 }
-
 .about__img img {
   width: 200px;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 /* ===== SKILLS =====*/
@@ -277,83 +255,69 @@ img {
   row-gap: 2rem;
   text-align: center;
 }
-
 .skills__subtitle {
   margin-bottom: var(--mb-2);
 }
-
 .skills__text {
   margin-bottom: var(--mb-4);
 }
-
 .skills__data {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
   font-weight: var(--font-semi);
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   margin-bottom: var(--mb-4);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
 }
-
 .skills__icon {
   font-size: 2rem;
   margin-right: var(--mb-2);
   color: var(--first-color);
 }
-
 .skills__names {
   display: flex;
   align-items: center;
 }
-
 .skills__bar {
   position: absolute;
   left: 0;
   bottom: 0;
   background-color: var(--first-color);
-  height: .25rem;
-  border-radius: .5rem;
+  height: 0.25rem;
+  border-radius: 0.5rem;
   z-index: var(--z-back);
 }
-
 .skills__html {
   width: 95%;
 }
-
 .skills__css {
   width: 85%;
 }
-
 .skills__js {
   width: 65%;
 }
-
 .skills__ux {
   width: 85%;
 }
-
 .skills__img {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 /* ===== WORK =====*/
 .work__container {
   row-gap: 2rem;
 }
-
 .work__img {
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
-
 .work__img img {
   transition: 1s;
 }
-
 .work__img img:hover {
   transform: scale(1.1);
 }
@@ -364,12 +328,11 @@ img {
   font-size: var(--normal-font-size);
   font-weight: var(--font-semi);
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: 1.5px solid var(--second-color);
   outline: none;
   margin-bottom: var(--mb-4);
 }
-
 .contact__button {
   display: block;
   border: none;
@@ -387,22 +350,18 @@ img {
   font-weight: var(--font-semi);
   padding: 2rem 0;
 }
-
 .footer__title {
   font-size: 2rem;
   margin-bottom: var(--mb-4);
 }
-
 .footer__social {
   margin-bottom: var(--mb-4);
 }
-
 .footer__icon {
   font-size: 1.5rem;
   color: #fff;
   margin: 0 var(--mb-2);
 }
-
 .footer__copy {
   font-size: var(--smaller-font-size);
 }
@@ -416,7 +375,6 @@ img {
     width: 200px;
   }
 }
-
 @media screen and (min-width: 576px) {
   .home {
     padding: 4rem 0 2rem;
@@ -441,7 +399,7 @@ img {
     text-align: initial;
   }
   .skills__container {
-    grid-template-columns: .7fr;
+    grid-template-columns: 0.7fr;
     justify-content: center;
     column-gap: 1rem;
   }
@@ -458,7 +416,6 @@ img {
     justify-items: center;
   }
 }
-
 @media screen and (min-width: 768px) {
   body {
     margin: 0;
@@ -515,7 +472,6 @@ img {
     column-gap: 2rem;
   }
 }
-
 @media screen and (min-width: 992px) {
   .bd-grid {
     margin-left: auto;
