--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -303,7 +303,15 @@ img {
   width: 85%;
 }
 .skills__img {
+  transition: 1s;
   border-radius: 0.5rem;
+  overflow: hidden;
+}
+.skills__img img {
+  transition: 1s;
+}
+.skills__img img:hover {
+  transform: scale(1.1);
 }
 
 /* ===== WORK =====*/
@@ -399,9 +407,9 @@ img {
     text-align: initial;
   }
   .skills__container {
-    grid-template-columns: 0.7fr;
-    justify-content: center;
-    column-gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+    padding-top: 2rem;
   }
   .work__container {
     grid-template-columns: repeat(2, 1fr);
@@ -462,10 +470,8 @@ img {
     width: 300px;
   }
   .skills__container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
-    align-items: center;
-    text-align: initial;
   }
   .work__container {
     grid-template-columns: repeat(3, 1fr);
